# img_editor

./: CMakeLists.txt  README.md
solution/asm/: sepia_filter.asm
solution/include/: image_inter.h  processing_bmp.h  rotate.h  select_command.h  sepia_filter.h
solution/include/processing_errors/: processing_bmp_errors.h  processing_rotate_errors.h  processing_select_command_errors.h  processing_sepia_filter_errors.h
solution/src/: main.c  processing_bmp.c  rotate.c  select_command.c  sepia_filter.c
solution/src/processing_errors/: processing_bmp_errors.c  processing_rotate_errors.c  processing_select_command_errors.c  processing_sepia_filter_errors.c
